deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: frigus
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: core-api
  ports:
    - name: http
      port: 80
      targetPort: http
